заробило - виводжу бренди

--- a/templates/cars.html
+++ b/templates/cars.html
@@ -1,4 +1,19 @@
 <div class="newCar">
-    test asdasd
+<h2>Carbrands</h2>
+<ul>
+    <li ng-repeat="carbrand in carbrends">
+        <p>ID:{{carbrand.id}} </p><p>Brand: {{carbrand.brand}}</p>
+
+
+    </li>
+</ul>
+
+
+    <form  name="editCarbrand" >
+
+        <label>Carbrand</label>
+        <input type="text" >
+        <input type="submit" value="Save">
+    </form>
 
 </div>
