создание новой марки

--- a/templates/cars.html
+++ b/templates/cars.html
@@ -1,5 +1,6 @@
 <div class="newCar">
 <h2>Carbrands</h2>
+    <a href="#/pxem" >Create new carbrand</a>
 <ul>
     <li ng-repeat="carbrand in carbrends">
         <p>ID:{{carbrand.id}} </p><p>Brand: {{carbrand.brand}}</p>
