--- a/templates/newcarbrand.html
+++ b/templates/newcarbrand.html
@@ -1,7 +1,8 @@
 <div class="new-carbrand">
     <h2> Create new</h2>
     <form>
-        <input type="text" ng-model="">
-        <input type="submit" value="Create">
+        <input type="text" ng-model="carbrand.brand">
+        <input type="submit" value="Save">
+        <input  type="button" value="Cancel">
     </form>
 </div>
