Create and view

--- a/templates/cars.html
+++ b/templates/cars.html
@@ -2,11 +2,11 @@
 <h2>Carbrands</h2>
     <a href="#/cars/new" >Create new carbrand</a><br>
     <label>Sort</label>
-    <input type="text" ng-model="sort">
+    <input ng-model="query">
 <ul>
-    <li ng-repeat="carbrand in carbrends | filter:sotr">
+    <li ng-repeat="carbrand in carbrends | filter:query">
         <span>|| ID:{{carbrand.id}} || </span><span>Brand: {{carbrand.brand }} ---</span>
-        <span><a href="#/cars/{{carbrand.id}}" >Edit</a></span>
+        <span><a href="#/cars/{{carbrand.id}}"  ng-click="Edit()">Edit</a></span>
         <span><a href="#/cars" ng-click="Delete(carbrand.id)" >Delete</a></span>
     </li>
 </ul>
