--- a/templates/newcarbrand.html
+++ b/templates/newcarbrand.html
@@ -2,7 +2,7 @@
     <h2> Create new</h2>
     <form>
         <input type="text" ng-model="carbrand.brand">
-        <input type="submit" value="Save">
-        <input  type="button" value="Cancel">
+        <input type="button" ng-click="Save()" value="Save">
+        <a href="#/cars"  >Cancel</a>
     </form>
 </div>
