--- a/templates/cars.html
+++ b/templates/cars.html
@@ -7,7 +7,11 @@
     <li ng-repeat="carbrand in carbrends | filter:query">
         <span>|| ID:{{carbrand.id}} || </span><span>Brand: {{carbrand.brand }} ---</span>
         <span><a href="#/cars/{{carbrand.id}}" >Edit</a></span>
+
         <span><a href="#/cars" ng-click="Delete(carbrand.id)" >Delete</a></span>
+        <span>
+            <edit-input brand="carbrand.brand" id="carbrand.id"></edit-input>
+        </span>
     </li>
 </ul>
 
