Directive new task

--- a/templates/cars.html
+++ b/templates/cars.html
@@ -9,7 +9,7 @@
         <!--<span>Brand: {{carbrand.brand }} -&#45;&#45;</span>-->
         <!--<span><a href="#/cars/{{carbrand.id}}" >Edit</a></span>-->
         <span>
-            <edit-input brand="carbrand"
+            <edit-input branding="carbrand"
                         type="number"
                         change="update(carbrand)">
 
