--- a/templates/directive.html
+++ b/templates/directive.html
@@ -1,5 +1,5 @@
 <span>
-  {{type}}
+  {{type}}asdasd
   <span ng-if="!isEdit">{{carbrand.id}}</span>
   <input ng-if="isEdit" type="{{type}}" ng-model="carbrand.brand" ng-blur="editBrand(carbrand)">
     <span style="cursor: pointer" ng-click="EditAtr()">EDIT</span>
